--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-dash==2.14.1
-dash-bootstrap-components==1.5.0
-plotly==5.18.0
-pandas==2.1.4
-numpy==1.26.2
+dash==3.0.4
+dash-bootstrap-components==2.0.3
+plotly==6.1.2
+pandas==2.3.0
+numpy==2.3.0
+matplotlib==3.10.3
+pydeck==0.9.1
 openpyxl==3.1.2
 altair==5.2.0
 gunicorn==21.2.0
